Добавлено Entity Framework Core

--- a/WebStore/appsettings.json
+++ b/WebStore/appsettings.json
@@ -1,11 +1,15 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft": "Warning",
-            "Microsoft.Hosting.Lifetime": "Information"
-        }
-    },
-    "AllowedHosts": "*",
-    "CustomHelloWorld":  "hello from config file..." 
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "AllowedHosts": "*",
+  "CustomHelloWorld": "hello from config file...",
+  "ConnectionStrings": {
+                          //"Server=localhost\\SQLEXPRESS;Database=master;Trusted_Connection=True;": null,
+    "DefaultConnection": "Server=.;Initial Catalog=WebStore;Trusted_Connection=True;Connection Timeout=30;"
+  }
 }
