--- a/WebStore/appsettings.json
+++ b/WebStore/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "CustomHelloWorld": "hello from config file...",
   "ConnectionStrings": {
-                          //"Server=localhost\\SQLEXPRESS;Database=master;Trusted_Connection=True;": null,
-    "DefaultConnection": "Server=.;Initial Catalog=WebStore;Trusted_Connection=True;Connection Timeout=30;"
+    //"Server=localhost\\SQLEXPRESS;Database=master;Trusted_Connection=True;": null,
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Initial Catalog=WebStore;Trusted_Connection=True;Connection Timeout=30;"
   }
 }
