--- a/WebStore/WebStore.csproj
+++ b/WebStore/WebStore.csproj
@@ -5,8 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\Admin\Controllers\" />
+    <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="Areas\Admin\Views\" />
     <Folder Include="Views\Shared\Components\Cats\" />
     <Folder Include="wwwroot\" />
+    <Folder Include="Areas\" />
   </ItemGroup>
 
   <ItemGroup>
